# Temporal

./: .gitignore  README.md  pyproject.toml
temporal/: __init__.py
temporal/app/: app_image.py  app_video.py
temporal/datasets/: create_video_dataset.py
temporal/eval/: callbacks.py  eval_image.py  eval_video.py
temporal/eval/metrics/: __init__.py  dice.py  iou.py  metric.py
temporal/inference_configs/: app_image.yaml  app_video.yaml  eval_image.yaml  eval_video.yaml
temporal/logging/: __init__.py
temporal/models/: __init__.py
temporal/models/sam2/sam2/: sam2_video_predictor.py
temporal/models/sam2/sam2/configs/sam2.1_training/: sam2.1_hiera_b+_MOSE_finetune.yaml
temporal/models/sam2/training/: train_hip.sh  train_oai.sh  train_rectal.sh  trainer.py
temporal/models/sam2/training/dataset/: vos_dataset.py  vos_segment_loader.py
temporal/models/sam2/training/model/: sam2.py
temporal/models/temporal/: build_sam.py  misc.py  model.py  temporal_predictor.py
temporal/models/temporal/layers/: __init__.py  tensors.py
temporal/models/utils/: checkpoint_manager.py  embedding_fns.py
temporal/utils/: dataset.py  icl.py  misc.py
